--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -1,12 +1,15 @@
 {
   "title": "Youtube Downloader",
-  "startSearch": "Start searching!",
+  "startSearch": "Start searching or put your URL!",
+  "searchUrl": "Download URL",
+  "searchUrlTooltip": "Paste your URL from clipboard",
 
   "settings": "Settings",
   "darkMode": "Dark Mode",
+  "ffmpegPath": "FFMPEG path localisation",
   "ffmpegContainer": "ffmpeg container",
   "ffmpegDescription": "This is the output format when two tracks (audio + video) are merged",
-  "ffmpegNotFound": "FFMPEG not found in PATH",
+  "ffmpegNotFound": "FFMPEG not found in PATH or not configured",
   "language": "Language",
   "downloadDir": "Download Directory",
   "selectDownloadDir": "Select download directory",
@@ -14,6 +17,15 @@
 
   "downloads": "Downloads",
   "author": "Author",
+  "uploadDateRow": "Published",
+
+  "tracksTooltip": "Tap on line to download stream or long tap to select stream for merge",
+  "mergeTracks": "Download & Merge tracks!",
+  "tracksBestMerge": "Best video + audio quality",
+  "tracksAll": "All",
+  "tracksVideoAudio": "Video + Audio",
+  "tracksVideo": "Video Only",
+  "tracksAudio": "Audio Only",
 
   "permissionError": "The app needs the storage permission to download files!",
 
@@ -79,6 +91,16 @@
 
   "finishMerge": "Merge finished: {title}",
   "@finishMerge": {
+    "placeholders": {
+      "title": {
+        "example": "Best video ever",
+        "description": "Video title"
+      }
+    }
+  },
+
+  "finishConvert": "Convertion finished : {title}",
+  "@finishConvert": {
     "placeholders": {
       "title": {
         "example": "Best video ever",
