--- a/lib/l10n/app_pt.arb
+++ b/lib/l10n/app_pt.arb
@@ -1,12 +1,15 @@
 {
   "title": "Youtube Downloader",
   "startSearch": "Inicie sua busca!",
+  "searchUrl": "Download URL",
+  "searchUrlTooltip": "Paste your URL from clipboard",
 
   "settings": "Configurações",
   "darkMode": "Modo Noturno",
+  "ffmpegPath": "FFMPEG path localisation",
   "ffmpegContainer": "FFMPEG container",
   "ffmpegDescription": "Este é o formato de saida quando dois arquivos (audio + video) são mesclados",
-  "ffmpegNotFound": "FFMPEG não foi encontrado em PATH",
+  "ffmpegNotFound": "FFMPEG não foi encontrado em PATH ou não configurado",
   "language": "Idioma",
   "downloadDir": "Local de armazenamento",
   "selectDownloadDir": "Selecione uma pasta para download",
@@ -14,6 +17,15 @@
 
   "downloads": "Downloads",
   "author": "Autor",
+  "uploadDateRow": "Published",
+
+  "tracksTooltip": "Tap on line to download stream or long tap to select stream for merge",
+  "mergeTracks": "Download & Merge tracks!",
+  "tracksBestMerge": "Best video + audio quality",
+  "tracksAll": "All",
+  "tracksVideoAudio": "Video + Audio",
+  "tracksVideo": "Video Only",
+  "tracksAudio": "Audio Only",
 
   "permissionError": "O applicativo precisa ter acesso ao seu armazenamento para realizar seus downloads!",
 
@@ -83,6 +95,16 @@
       "title": {
         "example": "Melhor vídeo de todos",
         "description": "Título do vídeo"
+      }
+    }
+  },
+
+  "finishConvert": "Convertion finished : {title}",
+  "@finishConvert": {
+    "placeholders": {
+      "title": {
+        "example": "Best video ever",
+        "description": "Video title"
       }
     }
   }
