--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -14,6 +14,8 @@
   "downloadDir": "Download Directory",
   "selectDownloadDir": "Select download directory",
   "invalidDir": "Invalid directory",
+  "credits": "Application credits",
+  "credits_content": "Graphics: https://www.flaticon.com/authors/freepik\nOriginal Author: https://github.com/Hexer10\nModified: https://github.com/mickbad",
 
   "downloads": "Downloads",
   "author": "Author",
