--- a/lib/l10n/app_fr.arb
+++ b/lib/l10n/app_fr.arb
@@ -1,6 +1,6 @@
 {
   "title": "Youtube Downloader",
-  "startSearch": "Faîtes une recherche ou saisissez une URL ",
+  "startSearch": "Saisissez une URL d'une vidéo ou d'une playlist",
   "searchUrl": "Télécharger l'URL",
   "searchUrlTooltip": "Coller votre url depuis le presse papier",
 
@@ -36,6 +36,15 @@
   "trackID3FieldAlbum": "Album",
   "trackID3Action": "Appliquez",
 
+  "playlistParsing": "Lecture de la playlist : {percent} %",
+  "@playlistParsing": {
+    "placeholders": {
+      "percent": {
+        "example": "29",
+        "description": "Scan percent"
+      }
+    }
+  },
   "playlistTooltip": "Tapez sur la ligne pour sélectionner ou déselectionner un titre de la liste",
   "playlistTitle": "Liste des {count} vidéos ou audios à télécharger",
   "@playlistTitle": {
@@ -49,6 +58,8 @@
   "playlistDownloadVideos": "Télécharger les vidéos",
   "playlistDownloadAudiosOnly": "Télécharger les audios",
   "playlistDownloadVideosOnly": "Télécharger les vidéos seulement",
+  "playlistSettingsQuotaTitle": "Quota de téléchargement",
+  "playlistSettingsQuotaDescription": "Nombre de téléchargements et de transformations simultanés",
 
   "permissionError": "L'application a besoin des permissions de stockage pour télécharger les fichiers !",
 
