--- a/lib/l10n/app_fr.arb
+++ b/lib/l10n/app_fr.arb
@@ -58,8 +58,11 @@
   "playlistDownloadVideos": "Télécharger les vidéos",
   "playlistDownloadAudiosOnly": "Télécharger les audios",
   "playlistDownloadVideosOnly": "Télécharger les vidéos seulement",
-  "playlistSettingsQuotaTitle": "Quota de téléchargement",
-  "playlistSettingsQuotaDescription": "Nombre de téléchargements et de transformations simultanés",
+
+  "settingsQuotaTitle": "Quota de téléchargement",
+  "settingsQuotaDescription": "Nombre de téléchargements et de transformations simultanés",
+  "settingsLeadingZeroTitle": "Playlist préfixe du nom du fichier",
+  "settingsLeadingZeroDescription": "Ajout de zéro en tête de nom du fichier pour les téléchargements de playlist",
 
   "permissionError": "L'application a besoin des permissions de stockage pour télécharger les fichiers !",
 
