--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -61,7 +61,7 @@
 
   "settingsQuotaTitle": "Download quota",
   "settingsQuotaDescription": "This is quota for concurrent download and transform streams",
-  "settingsLeadingZeroTitle": "Playlist filename header",
+  "settingsLeadingZeroTitle": "Playlist: filename header",
   "settingsLeadingZeroDescription": "Add leading zero in pathname for playlist downloading",
 
   "permissionError": "The app needs the storage permission to download files!",
