download page: remove all download list without really delete files on disk

--- a/lib/l10n/app_fr.arb
+++ b/lib/l10n/app_fr.arb
@@ -21,6 +21,8 @@
   "author": "Auteur",
   "uploadDateRow": "Publication",
 
+  "downloadCleanUpList": "Nettoyer la liste (aucune suppression)",
+
   "tracksTooltip": "Tapez sur une ligne pour télécharger ou un appui long pour sélectionner la fusion",
   "mergeTracks": "Télécharger et fusionner les pistes !",
   "tracksBestMerge": "Meilleure qualité vidéo et audio",
