--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -21,6 +21,8 @@
   "author": "Author",
   "uploadDateRow": "Published",
 
+  "downloadCleanUpList": "Clean download list (none deleted)",
+
   "tracksTooltip": "Tap on line to download stream or long tap to select stream for merge",
   "mergeTracks": "Download & Merge tracks!",
   "tracksBestMerge": "Best video + audio quality",
