--- a/lib/l10n/app_zh.arb
+++ b/lib/l10n/app_zh.arb
@@ -21,6 +21,8 @@
   "author": "创作者",
   "uploadDateRow": "发表",
 
+  "downloadCleanUpList": "整理下载目录（无删除文件）",
+
   "tracksTooltip": "敲排为下载流程，或者长按排多种流程为合并",
   "mergeTracks": "下载和合并轨！",
   "tracksBestMerge": "最硬视频和最硬音响",
